fixed z-index

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -83,7 +83,7 @@ header {
 
 header::before {
   position: absolute;
-  z-index: 1;
+  z-index: -1;
   width: 100%;
   height: 100%;
   content: "";
